# anki-tui

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
scripts/: build-sidecar-wheelhouse.sh
sidecar/: anki_tui_sidecar.py  pyproject.toml
sidecar/tests/: test_sidecar.py
src/: app.rs  error.rs  main.rs  sidecar.rs
src/db/: connection.rs  mod.rs  models.rs  mutations.rs  queries.rs
src/media/: audio.rs  kitty.rs  mod.rs
src/proto/: deck_config.rs  deck_kind.rs  decode.rs  mod.rs  notetype_config.rs  template_config.rs
src/scheduler/: answer.rs  mod.rs  queue.rs  sm2.rs  timing.rs
src/template/: html_to_tui.rs  mod.rs  render.rs
src/tui/: event.rs  mod.rs  terminal.rs
src/tui/screens/: deck_select.rs  mod.rs  review.rs
src/tui/widgets/: card_content.rs  mod.rs  rating_bar.rs
tests/: test_kitty.sh  test_kitty_tmux.sh  test_pypi_fallback.sh
