[package]
name = "anki-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled", "collation"] }
ego-tree = "0.10"
thiserror = "2"
scraper = "0.22"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
rand = "0.9"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rodio = { version = "0.20", default-features = false, features = ["mp3", "vorbis"] }
