[package]
name = "anki-tui"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Terminal-based flashcard reviewer for local Anki collections"
repository = "https://github.com/AndreasPlt/anki-tui"
license = "MIT"
readme = "README.md"
keywords = ["anki", "flashcards", "tui", "terminal", "srs"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
ego-tree = "0.10"
thiserror = "2"
scraper = "0.22"
base64 = "0.22"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rodio = { version = "0.20", default-features = false, features = ["mp3", "vorbis"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
