[project]
name = "anki-tui-sidecar"
version = "0.1.0"
description = "Python sidecar for anki-tui using Anki's official scheduler"
requires-python = ">=3.10,<3.14"
dependencies = [
    "anki>=25.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
